# docker-sandbox-example

./: .dockerignore  .gitignore  Dockerfile.sandbox  Dockerfile.worker  README.md  docker-compose.yml  main.py  pyproject.toml  requirements.txt  test-containers.py  test_container_tasks.py  test_module_tasks.py
app/: celery_app.py  container_manager.py  task_tracker.py  tasks.py
